feat(update): add version checking and self-update functionality for autospec
This commit introduces a new internal/update package that provides
version checking and self-update capabilities for the autospec tool.
It includes semantic version parsing, a GitHub API client for fetching
release information, and the necessary infrastructure for downloading
and installing updates. The implementation is designed to be non-blocking
and user-friendly, allowing users to check for updates without delaying
the display of version information.

--- a/specs/070-version-update-check/plan.yaml
+++ b/specs/070-version-update-check/plan.yaml
@@ -312,7 +312,7 @@ risks:
       Use atomic rename pattern: download to temp file, verify checksum, rename in place.
       Keep backup until new binary is confirmed working.
   - risk: "Platform detection fails"
-    likelihood: "very low"
+    likelihood: "low"
     impact: "high"
     mitigation: |
       Use runtime.GOOS and runtime.GOARCH which are reliable.
